1、故障预防 2、内存排查 3、面向对象、设计原则、重构、代码规范、代码审查 4、数据库架构设计 5、得物redis实战 6、架构设计思路 7、中间件开发基础