@@ -1,4 +1,4 @@
-# 后台服务变慢诊断思路
+# 如何诊断后台服务变慢
 
 ## 怎样找到最耗CPU的Java线程
 
@@ -20,41 +20,23 @@
 
 ## GC日志输出
 
--verbose:gc
+-verbose:gc 打印 GC 日志
 
-打印 GC 日志
+PrintGCDetails 打印详细 GC 日志
 
-PrintGCDetails
+PrintGCDateStamps 系统时间，更加可读，PrintGCTimeStamps 是 JVM 启动时间
 
-打印详细 GC 日志
+PrintGCApplicationStoppedTime 打印 STW 时间
 
-PrintGCDateStamps
+PrintTenuringDistribution 打印对象年龄分布
 
-系统时间，更加可读，PrintGCTimeStamps 是 JVM 启动时间
+loggc 将以上 GC 内容输出到文件中；注意：将此文件放在单独的磁盘，防止与业务数据产生IO资源竞争
 
-PrintGCApplicationStoppedTime
+HeapDumpOnOutOfMemoryError  OOM 时 Dump 信息
 
-打印 STW 时间
+HeapDumpPath Dump 文件保存路径
 
-PrintTenuringDistribution
-
-打印对象年龄分布
-
-loggc
-
-将以上 GC 内容输出到文件中；注意：将此文件放在单独的磁盘，防止与业务数据产生IO资源竞争
-
-HeapDumpOnOutOfMemoryError
-
-OOM 时 Dump 信息
-
-HeapDumpPath
-
-Dump 文件保存路径
-
-ErrorFile
-
-错误日志存放路径
+ErrorFile 错误日志存放路径
 
 ## GC日志可视化
 
@@ -65,8 +47,6 @@ GCViewer
 ## JDK 常用命令
 
 jps：用来显示 Java 进程
-
-jstat：用来查看 GC
 
 jstat -gcutil $pid 1000#每隔1秒输出垃圾回收情况（eden、surivor0、Surivor1、Old、Metaspace占空间，年轻代的回收次数和回收耗时，Full GC 的次数和耗时）
 
@@ -259,7 +239,7 @@ ByteBuffer 对象被垃圾回收，那么就会由 ReferenceHandler 线程通过
 
 Bootstrap Classloader
 
-顶级累加器s，任何类的加载行为，都要经它过问。它的作用是加载核心类库，也就是rt.jar、resources.jar、charsets.jar等。-Xbootclasspath 参数从指定的路径加载
+顶级类加器，任何类的加载行为，都要经它过问。它的作用是加载核心类库，也就是rt.jar、resources.jar、charsets.jar等。-Xbootclasspath 参数从指定的路径加载
 
 Extension ClassLoader
 
@@ -267,7 +247,7 @@ Extension ClassLoader
 
 Application ClassLoader
 
-这是我们写的Java类的默认加载器，有时候也叫作SystemClassLoader。一般用来加载classpath下的其他所有jar包和.class文件
+应用类加载器，有时候也叫作SystemClassLoader。一般用来加载classpath下的其他所有jar包和.class文件
 
 ## 类的加载机制
 
@@ -521,7 +501,7 @@ G1使用此解决方案，搭配RSet，效率高不需要扫描整个堆查找�
 
 长时间存活的对象占用的区域
 
-一般使用“标记-清除”、“标记-整理”算法。老年代存活的对象比较过，占用的空间比较大，不适合复制
+一般使用“标记-清除”、“标记-整理”算法。老年代存活的对象比较长，占用的空间比较大，不适合复制
 
 ## 提升
 
@@ -555,9 +535,9 @@ G1使用此解决方案，搭配RSet，效率高不需要扫描整个堆查找�
 
 是否TLAB分配，在Eden区分配
 
-空闲列表分配
+标记-清除时，空闲列表分配
 
-指针碰撞分配
+标记-复制时，指针碰撞分配
 
 一个Object对象占多少字节
 
@@ -579,13 +559,11 @@ java -XX:+PrintCommandLineFlags -version
 
 # 何为GC ROOTS
 
-1. Java虚拟机栈中的引用的对象 
+1、Java虚拟机栈中的引用的对象 
 
- 2. 方法区中的类静态属性引用的对象
+2、方法区中的类静态属性引用的对象
 
- 3. 方法区中的常量引用的对象
-
-4.本地方法栈中 JNI的引用的对象
+3、本地方法栈中 JNI的引用的对象
 
 # 对象访问
 
@@ -596,46 +574,6 @@ java -XX:+PrintCommandLineFlags -version
 直接指针
 
 访问速度快，节省一次指针定位的开销
-
-# 堆外内存
-
-元空间MetaSpace
-
-主要是方法区和常量池的存储之地，使用数“MaxMetaspaceSize”可以限制它的大小
-
-直接内存
-
-通过 DirectByteBuffer 申请的内存,可以使用参数“MaxDirectMemorySize”来限制它的大小
-
-CodeCache
-
-其他堆外内存
-
-主要是指使用了 Unsafe 或者其他 JNI 手段直接直接申请的内存,没有参数限制大小
-
-堆外内存问题排查
-
-Perf
-
-除了能够进行一些性能分析，它还能帮助我们找到相应的 native 调用
-
-perf record -g -p PID监控栈函数调用
-
-perf 运行一段时间后 Ctrl+C 结束，会生成一个文件 perf.data
-
- perf report -i perf.data 查看报告
-
-gperftools
-
-google 还有一个类似的、非常好用的工具，叫做 gperftools，我们主要用到它的 Heap Profiler，功能更加强大
-
-它的启动方式有点特别，安装成功之后，你只需要输出两个环境变量即可
-
-mkdir -p /opt/test 
-export LD_PRELOAD=/usr/lib64/libtcmalloc.so 
-export HEAPPROFILE=/opt/test/heap #存放内存申请的动作
-
-pprof -text *heap  | head -n 200 #分析文件，追踪到申请内存最多的函数
 
 # 评价 GC算法的标准
 
@@ -649,7 +587,7 @@ pprof -text *heap  | head -n 200 #分析文件，追踪到申请内存最
 都会保持一部分内存是空闲的，那么它的空间利用率就无法达到 100%，这是由算法本
 身决定的；
 5、是否停顿：Collector 在整理内存的时候会存在搬移对象的情况，因为修改指针是一种非
-常敏感的操作，有时候它会要求 Mutator 停止工作。是否需要 Mutator 停顿，以及停
+常敏感的操作，有时候它会要求 Mutator（业务线程，可能改变对象的存活和死亡状态） 停止工作。是否需要 Mutator 停顿，以及停
 顿时长是多少，是否会影响业务的正常响应等。停顿时长在某些情况下是一个关键性指
 标；
 6、实现的复杂度：有些算法虽然看上去很美妙，但因为其实现起来太复杂，代码难以维
@@ -716,19 +654,22 @@ Java 对象都是在 Java 堆中创建的，它们之间的相互引用关系可
 
 比较适合管理短生命周期对象
 
+通过碰撞指针的方式分配内存
+
 ## Scavenge 算法
 
 每次回收中能存活下来的对象占总体的比例都比较小。根据这个特点，把 To 空间设置得小一点，来提升空间的利用率
 
 Hotspot 在实现 copy 算法时做了一些改进。它将 From 空间称为 Eden 空间，To 空间在算法实现中则被分成 S0 和 S1 两部分，这样 To 空间的浪费就可以减少了
 
+Scavenge 算法是简单 copy 算法的一种改进。配置 Survivor 空间的大小是 JVM GC 中的重要参数，例如：-XX:SurvivorRatio=8，代表 Eden:S0:S1=8:1:1
+
 在复制的过程中，对象的地址会发生变化，为了保证引用的正确性，引入了forwarding 指针。也就是说每个对象的头部引入一个新的域，叫做forwarding。正常状态下，它的值是 NULL，如果一个对象被拷贝到新的空间里以后，就把它的新地址设到旧对象forwarding 指针里
 
 ## 特点
 
 对象之间紧密排列，中间没有空隙，也就是没有内存碎片；
-分配内存的效率非常高。因为每次分配对象都是把指针简单后移即可，操作非常少，所
-以效率高；
+分配内存的效率非常高。因为每次分配对象都是把指针简单后移即可，操作非常少，所以效率高；
 回收的效率取决于存活对象的多少，如果存活的对象少，则回收效率高。
 
 
@@ -757,12 +698,13 @@ Mark-Sweep 算法由 Mark 和 Sweep 两个阶段组成。在 Mark 阶段，垃�
 
 要做的事情就是把非活跃对象，也就是垃圾对象的空间回收起来，重新将它们放回空闲链表中。具体做法就是按照空间顺序，从头至尾扫描整个空间里的所有对象
 
-Mark-Sweep 算法回收的是垃圾对象，如果垃圾对象比较少，回收阶段所做的事情就比较
-少。所以它适合于存活对象多，垃圾对象少的情况
+Mark-Sweep 算法回收的是垃圾对象，如果垃圾对象比较少，回收阶段所做的事情就比较少。所以它适合于存活对象多，垃圾对象少的情况
 
 # 提前晋升
 
-提前晋升是指分代垃圾回收算法中，年轻代对象的年龄还没有达到晋升的阈值就因为年轻代空间的不足而不得不提前搬进老年代的现象。提前晋升不仅说明年轻代的压力大，而且会导致老年代空间的快速消耗
+提前晋升是指分代垃圾回收算法中，年轻代对象的年龄还没有达到晋升的阈值就因为年轻代空间的不足而不得不提前搬进老年代的现象。
+
+提前晋升不仅说明年轻代的压力大，而且会导致老年代空间的快速消耗
 
 可以使用jstat工具判断提前晋升。
 
@@ -776,7 +718,7 @@ Mark-Sweep 算法回收的是垃圾对象，如果垃圾对象比较少，回收
 
 基于对象的生命周期引入了分代垃圾回收算法，它将堆空间划分为年轻代和老年代
 
-对于存活时间比较短的对象，年轻代可以用 Scavenge 算法回收。Java 中的函数局部对象和临时对象也会在堆里进行分配，这就导致 Java 中的对象的生命周期都不长
+对于存活时间比较短的对象，年轻代可以用 Scavenge 算法回收。Java 中的函数创建的对象也会在堆里进行分配，这就导致 Java 中的对象的生命周期都不长
 
 对于存活时间比较长的对象，老年代可以使用 Mark-Sweep 算法
 
@@ -814,14 +756,17 @@ Card table的置位也是通过写屏障实现的
 
 Cardtable不仅可以实现跨代引用的功能，还实现了标记灰色节点的功能
 
-# CMS收集器
+# 什么是CMS收集器
+
+CMS 的全称是 Mostly Concurrent Mark and Sweep Garbage Collector（主要并发­标记­清除­垃圾收集器），它在年轻代使用复制算法，而对老年代使用标记-清除算法
 
 老年代并发的， 垃圾回收和应用程序同时运行，降低STW的时间
 
 CMS既然是MarkSweep，就一定会有碎片化的问题，碎片到达一定程度，CMS的老年代分配对象分配不下的时候，使用SerialOld 进行老年代回收
 
-为了减少 GC 停顿，我们可以在做 GC Mark 的时候，让业务线程不要停下来。这意味着
-GC Mark 和业务线程在同时工作，这就是并发（Concurrent）的 GC 算法
+CMS用一个链表将所有的空闲空间维护起来，这个链表就是空闲链表（freelist）。当内存管理器需要申请内存空间时，便向这个链表查询
+
+为了减少 GC 停顿，我们可以在做 GC Mark 的时候，让业务线程不要停下来。这意味着GC Mark 和业务线程在同时工作，这就是并发（Concurrent）的 GC 算法
 
 并发 GC 是指 GC 线程和业务线程同时工作，并行是指多个 GC 线程同时工作
 
@@ -853,17 +798,19 @@ GC Mark 和业务线程在同时工作，这就是并发（Concurrent）的 GC �
 
 ### 初始标记阶段
 
-标记老年代中的根对象，采用 Stop The World 的做法，一般不遍历年轻代对象
+只标记直接关联 GC root 的对象，一般都采用 Stop The World 的做法，一般不遍历年轻代对象，也就是不关注从年轻代指向老年代的引用
 
 ### 并发标记阶段
 
-如果在并发标记的过程中，业务线程修改了对象之间的引用关系，在 write barrier 中，只要一个对象引用了另外一个对象 ，不管这两个对象是什么颜色的，都将 引用对象所对应的 card 置位。
+如果在并发标记的过程中，业务线程修改了对象之间的引用关系。CMS 采用的办法是：在 write barrier 中，只要一个对象 A 引用了另外一个对象 B，不管 A 和 B 是什么颜色的，都将 A 所对应的 card 置位。
 
 当一轮标记完成以后，如果还有置位的 card，那么垃圾回收器就会开启新一轮并发标记。新的一轮标记，会从上一轮置位的 card 所对应的对象开始进行遍历，遍历完成后再把card 全部清零，所以这样的一轮并发标记也被称为预清理
 
 如果每一轮都有 card 置位，应该怎么办呢？CMS 也会在预清理达到一定次数以后停止，进入重标记阶段
 
 ### 重标记阶段
+
+通常 CMS 会尝试在年轻代尽可能空的情况下运行 Final Remark 阶段，以免接连多次发生 STW 事件
 
 重标记的作用是遍历新生代和 card 置位的对象，对老年代对象做一次重新标记
 
@@ -879,11 +826,11 @@ GC Mark 和业务线程在同时工作，这就是并发（Concurrent）的 GC �
 
 清理垃圾回收所使用的资源。为下一次 GC 执行做准备
 
-# G1算法
+# 什么是G1算法
 
 ## 简介
 
-G1也是一个分代的垃圾回收算法
+G1也是一个分区的垃圾回收算法
 
 G1的老年代和年轻代不再是一块连续的空间，整个堆被划分成若干个大小相同的Region
 
@@ -891,9 +838,11 @@ Region的类型有Eden、Survivor、Old、Humongous 四种
 
 Humongous 是用来存放大对象的，如果一个对象的大小大于一个Region的 50%，就认为这个对象是一个大对象。为了防止大对象的频繁拷贝，我们可以将大对象直接放到 Humongous 中
 
+发生gc时，垃圾最多的小堆区，会被优先收集。这就是 G1 名字的由来
+
 ## 如何解决漏标
 
-当灰色对象对白色对象的引用关系消失以后，再将白色对象标记为灰色，即便将来黑色对象对白色对象的引用消失了，也会在当前 GC 周期内被视为活跃对象。也就是说，被标记为灰色的白色对象可能变成浮动垃圾。把这种在删除引用的时候进行维护的屏障叫做 deletion barrie
+当灰色对象对白色对象的引用关系消失以后，再将白色对象标记为灰色，即便将来黑色对象对白色对象的引用消失了，也会在当前 GC 周期内被视为活跃对象。也就是说，被标记为灰色的白色对象可能变成浮动垃圾。把这种在删除引用的时候进行维护的屏障叫做 deletion barrier
 
 通过使用deletion barrier，在并发标记阶段，即便对象的全部引用被删除，也会被当做活跃对象来处理。就好像在 GC 开始的瞬间，内存管理器为所有活跃对象做了一个快照一样，即开始时快照（Snapshot At The Beginning，SATB）
 
@@ -905,22 +854,21 @@ Humongous 是用来存放大对象的，如果一个对象的大小大于一个R
 
 ## 垃圾回收模式
 
-G1 的垃圾回收模式有两种：分别是 young GC 和 mixed GC。
+young GC：只回收年轻代的 Region
 
-young GC：只回收年轻代的 Region。
-mixed GC：回收全部的年轻代 Region，并回收部分老年代的 Regio
+并发标记
+
+mixed GC：回收全部的年轻代 Region，并回收部分老年代的 Region
 
 mixed 回收的老年代 Region 是需要进行决策的（Humongous 在回收时也是当做老年代的Region 处理的）。把 mixed GC 中选取的老年代对象 Region 的集合称之为回收集合（CollectionSet，CSet）。
 
 CSet 的选取要素有以下两点：
-1、该 Region 的垃圾占比。垃圾占比越高的 Region，被放入 CSet 的优先级就越高，这就
-是垃圾优先策略（Garbage First）
-2、建议的暂停时间。建议的暂停时间由 -XX:MaxGCPauseMillis 指定，G1 会根据这个值
-来选择合适数量的老年代 Region。
+1、该 Region 的垃圾占比。垃圾占比越高的 Region，被放入 CSet 的优先级就越高，这就是垃圾优先策略（Garbage First）
+2、建议的暂停时间。建议的暂停时间由 -XX:MaxGCPauseMillis 指定，G1 会根据这个值来选择合适数量的老年代 Region。
 
 MaxGCPauseMillis 默认是 200ms，不过需要注意的是，MaxGCPauseMillis 设置的越小，选取的老年代 Region就会越少，如果 GC 压力居高不下，就会触发 G1 的 Full GC
 
-参数InitiatingHeapOccupancyPercent（IHOP），它的作用是在老年代的内存空间达到一定百分比之后，启动并发标记。当然，这更进一步是为了触发mixed GC，以此来回收老年代。如果一个应用老年代对象产生速度较快，可以尝试适当调小 IHOP
+参数InitiatingHeapOccupancyPercent（IHOP），它的作用是内存空间达到一定百分比之后，启动并发标记。当然，这更进一步是为了触发mixed GC，以此来回收老年代。如果一个应用老年代对象产生速度较快，可以尝试适当调小 IHOP
 
 ## 维护跨区引用
 
@@ -928,7 +876,9 @@ MaxGCPauseMillis 默认是 200ms，不过需要注意的是，MaxGCPauseMillis �
 
 和Card table 不同的是，RSet 记录谁引用了我，这种记录集被人们称为 point-in 型的，而 Card table 则记录我引用了谁，这种记录集被称为 point-out 型
 
-RSet需要维护老年代Region到年轻代Region的引用和老年代Region到老年代Region的引用
+对于年轻代的 Region，它的 RSet 只保存了来自老年代的引用，这是因为年轻代的回收是针对所有年轻代 Region 的，没必要画蛇添足。所以说年轻代 Region 的 RSet 有可能是空的。
+
+而对于老年代的 Region 来说，它的 RSet 也只会保存老年代对它的引用
 
 RSet的记录也是通过写屏障实现的，RSet中记录的也是card（dirty card）。业务线程也不是直接将dirty card 放到 RSet 中的。而是在业务线程中引入一个叫做 dirty card queu（DCQ）的队列，在写屏障中，业务线程只需要将 dirty card 放入 DCQ 中
 
@@ -1008,5 +958,508 @@ ZGC 也不是完全没有 STW 的。在进行初始标记时，它也需要进�
 
 ### Remap
 
-此阶段主要是对地址视图和对象之间的引用关系做修正
+此阶段主要是对地址视图和对象之间的引用关系做修正，因为在 Relocate 阶段，GC 线程会将活跃对象快速搬移到新的区域，但是却不会同时修复对象之间的引用
 
+
+
+
+
+什么情况下会发生栈溢出
+
+栈的大小可以通过 -Xss 参数进行设置，当递归层次太深的时候，则会发生栈溢出
+
+
+
+类加载有几个过程？
+加载、验证、准备、解析、初始化
+
+
+
+MinorGC、MajorGC、FullGC 都什么时候发生？
+MinorGC 在年轻代空间不足的时候发生，
+
+MajorGC 指的是老年代的 GC，出现 MajorGC 一般经常伴有 MinorGC。
+
+FullGC 有三种情况：第一，当老年代无法再分配内存的时候；第二，元空间不足的时候；第三，显示调用 System.gc 的时候。另外，像 CMS 一类的垃圾回收器，在 MinorGC 出现 promotion failure 的时候也会发生 FullGC
+
+
+
+safepoint 是什么？
+当发生 GC 时，用户线程必须全部停下来，才可以进行垃圾回收，这个状态我们可以认为 JVM 是安全的（safe），整个堆的状态是稳定的。
+
+如果在 GC 前，有线程迟迟进入不了 safepoint，那么整个 JVM 都在等待这个阻塞的线程，造成了整体 GC 的时间变长
+
+
+
+JVM 有哪些内存区域？（JVM 的内存布局是什么？）
+JVM 包含堆、元空间、Java 虚拟机栈、本地方法栈、程序计数器等内存区域，其中，堆是占用内存最大的一块，
+
+Java 的内存模型是什么？（JMM 是什么？）
+JVM 试图定义一种统一的内存模型，能将各种底层硬件以及操作系统的内存访问差异进行封装，使 Java 程序在不同硬件以及操作系统上都能达到相同的并发效果。它分为工作内存和主内存，线程无法对主存储器直接进行操作，如果一个线程要和另外一个线程通信，那么只能通过主存进行交换
+
+
+
+JVM 垃圾回收时如何确定垃圾？什么是 GC Roots？
+JVM 采用的是可达性分析算法。JVM 是通过 GC Roots 来判定对象存活的，从 GC Roots 向下追溯、搜索，会产生一个叫做 Reference Chain 的链条。当一个对象不能和任何一个 GC Root 产生关系时，就判定为垃圾
+
+GC Roots 大体包括：
+
+ 活动线程相关的各种引用，比如虚拟机栈中 栈帧里的引用；
+ 类的静态变量引用；
+ JNI 引用等。
+能够找到 Reference Chain 的对象，就一定会存活么？
+不一定，还要看 Reference 类型，弱引用在 GC 时会被回收，软引用在内存不足的时候会被回收，但如果没有 Reference Chain 对象时，就一定会被回收。
+
+强引用、软引用、弱引用、虚引用是什么？
+普通的对象引用关系就是强引用。
+
+软引用用于维护一些可有可无的对象。只有在内存不足时，系统则会回收软引用对象，如果回收了软引用对象之后仍然没有足够的内存，才会抛出内存溢出异常。
+
+弱引用对象相比软引用来说，要更加无用一些，它拥有更短的生命周期，当 JVM 进行垃圾回收时，无论内存是否充足，都会回收被弱引用关联的对象。
+
+虚引用是一种形同虚设的引用，在现实场景中用的不是很多，它主要用来跟踪对象被垃圾回收的活动。
+
+你都有哪些手段用来排查内存溢出？
+
+内存溢出包含很多种情况，我在平常工作中遇到最多的就是堆溢出。有一次线上遇到故障，重新启动后，使用 jstat 命令，发现 Old 区一直在增长。我使用 jmap 命令，导出了一份线上堆栈，然后使用 MAT 进行分析，通过对 GC Roots 的分析，发现了一个非常大的 HashMap 对象，这个原本是其他同事做缓存用的，但是一个无界缓存，造成了堆内存占用一直上升，后来，将这个缓存改成 guava 的 Cache，并设置了弱引用，故障就消失了。
+
+
+
+我们线上使用较多的是 G1，也有年轻代和老年代的概念，不过它是一个整堆回收器，它的回收对象是小堆区 。
+生产上如何配置垃圾收集器？
+
+
+首先是内存大小问题，基本上每一个内存区域我都会设置一个上限，来避免溢出问题，比如元空间。通常，堆空间我会设置成操作系统的 2/3，超过 8GB 的堆，优先选用 G1。
+
+然后我会对 JVM 进行初步优化，比如根据老年代的对象提升速度，来调整年轻代和老年代之间的比例。
+
+接下来是专项优化，判断的主要依据是系统容量、访问延迟、吞吐量等，我们的服务是高并发的，所以对 STW 的时间非常敏感。
+
+我会通过记录详细的 GC 日志，来找到这个瓶颈点，借用 GCeasy 这样的日志分析工具，很容易定位到问题。
+
+假如生产环境 CPU 占用过高，请谈谈你的分析思路和定位。
+
+
+首先，使用 top -H 命令获取占用 CPU 最高的线程，并将它转化为十六进制。
+
+然后，使用 jstack 命令获取应用的栈信息，搜索这个十六进制，这样就能够方便地找到引起 CPU 占用过高的具体原因。
+
+
+
+
+
+
+GC 日志的 real、user、sys 是什么意思？
+
+ real 指的是从开始到结束所花费的时间，比如进程在等待 I/O 完成，这个阻塞时间也会被计算在内。
+ user 指的是进程在用户态（User Mode）所花费的时间，只统计本进程所使用的时间，是指多核。
+ sys  指的是进程在核心态（Kernel Mode）所花费的 CPU 时间量，即内核中的系统调用所花费的时间，只统计本进程所使用的时间。
+
+什么情况会造成元空间溢出？
+元空间默认是没有上限的，不加限制比较危险。当应用中的 Java 类过多时，比如 Spring 等一些使用动态代理的框架生成了很多类，如果占用空间超出了我们的设定值，就会发生元空间溢出。
+
+什么时候会造成堆外内存溢出？
+使用了 Unsafe 类申请内存，或者使用了 JNI 对内存进行操作，这部分内存是不受 JVM 控制的，不加限制使用的话，会很容易发生内存溢出。
+
+SWAP 会影响性能么？
+当操作系统内存不足时，会将部分数据写入到 SWAP ，但是 SWAP 的性能是比较低的。如果应用的访问量较大，需要频繁申请和销毁内存，那么很容易发生卡顿。一般在高并发场景下，会禁用 SWAP。
+
+有什么堆外内存的排查思路？
+进程占用的内存，可以使用 top 命令，看 RES 段占用的值，如果这个值大大超出我们设定的最大堆内存，则证明堆外内存占用了很大的区域。
+
+使用 gdb 命令可以将物理内存 dump 下来，通常能看到里面的内容。更加复杂的分析可以使用 Perf 工具，或者谷歌开源的 GPerftools。那些申请内存最多的 native 函数，就很容易找到。
+HashMap 中的 key，可以是普通对象么？有什么需要注意的地方？
+Map 的 key 和 value 可以是任何类型，但要注意的是，一定要重写它的 equals 和 hashCode 方法，否则容易发生内存泄漏。
+
+
+
+大型项目如何进行性能瓶颈调优
+
+当一个系统出现问题的时候，研发一般不会想要立刻优化 JVM，或者优化操作系统，会尝试从最高层次上进行问题的解决：解决最主要的瓶颈点
+
+数据库优化： 数据库是最容易成为瓶颈的组件，从 SQL 优化或者数据库本身去提高它的性能。如果瓶颈依然存在，则会考虑分库分表将数据打散，如果这样也没能解决问题，则可能会选择缓存组件进行优化。。
+
+集群最优：存储节点的问题解决后，计算节点也有可能发生问题。一个集群系统如果获得了水平扩容的能力，就会给下层的优化提供非常大的时间空间。
+
+硬件升级：水平扩容不总是有效的，原因在于单节点的计算量比较集中，或者 JVM 对内存的使用超出了宿主机的承载范围。在动手进行代码优化之前，我们会对节点的硬件配置进行升级。升级容易，降级难，降级需要依赖代码和调优层面的优化。
+
+代码优化：代码优化是提高性能最有效的方式，但需要收集一些数据，这个过程可能是服务治理，也有可能是代码流程优化。使用 JavaAgent 技术，会无侵入的收集一些 profile 信息，供我们进行决策。
+
+并行优化：并行优化的对象是这样一种接口，它占用的资源不多，计算量也不大，就是速度太慢。所以我们通常使用 ContDownLatch 对需要获取的数据进行并行处理，
+
+JVM 优化：虽然对 JVM 进行优化，有时候会获得巨大的性能提升，但在 JVM 不发生问题时，我们一般不会想到它。原因就在于，相较于上面 5 层所达到的效果来说，它的优化效果有限。
+
+操作系统优化：操作系统优化是解决问题的杀手锏，比如像 HugePage、Luma、“CPU 亲和性”这种比较底层的优化。但就计算节点来说，对操作系统进行优化并不是很常见。运维在背后会做一些诸如文件句柄的调整、网络参数的修改，这对于我们来说就已经够用了。
+
+
+
+本课时我们主要分享一个实践案例，即大型项目如何进行性能瓶颈调优，这也是对前面所学的知识进行总结。
+
+性能调优是一个比较大且比较模糊的话题。在大型项目中，既有分布式的交互式调优问题，也有纯粹的单机调优问题。由于我们的课程主要讲解 JVM 相关的知识点，重点关注 JVM 的调优、故障或者性能瓶颈方面的问题排查，所以对于分布式应用中的影响因素，这里不过多介绍。
+优化层次
+下面是我总结的一张关于优化层次的图，箭头表示优化时需考虑的路径，但也不总是这样。当一个系统出现问题的时候，研发一般不会想要立刻优化 JVM，或者优化操作系统，会尝试从最高层次上进行问题的解决：解决最主要的瓶颈点。
+
+
+
+数据库优化： 数据库是最容易成为瓶颈的组件，研发会从 SQL 优化或者数据库本身去提高它的性能。如果瓶颈依然存在，则会考虑分库分表将数据打散，如果这样也没能解决问题，则可能会选择缓存组件进行优化。这个过程与本课时相关的知识点，可以使用 jstack 获取阻塞的执行栈，进行辅助分析。
+
+集群最优：存储节点的问题解决后，计算节点也有可能发生问题。一个集群系统如果获得了水平扩容的能力，就会给下层的优化提供非常大的时间空间，这也是弹性扩容的魅力所在。我接触过一个服务，由最初的 3 个节点，扩容到最后的 200 多个节点，但由于人力问题，服务又没有什么新的需求，下层的优化就一直被搁置着。
+
+硬件升级：水平扩容不总是有效的，原因在于单节点的计算量比较集中，或者 JVM 对内存的使用超出了宿主机的承载范围。在动手进行代码优化之前，我们会对节点的硬件配置进行升级。升级容易，降级难，降级需要依赖代码和调优层面的优化。
+
+代码优化：出于成本的考虑，上面的这些问题，研发团队并不总是坐视不管。代码优化是提高性能最有效的方式，但需要收集一些数据，这个过程可能是服务治理，也有可能是代码流程优化。我在第 21 课时介绍的 JavaAgent 技术，会无侵入的收集一些 profile 信息，供我们进行决策。像 Sonar 这种质量监控工具，也可以在此过程中帮助到我们。
+
+并行优化：并行优化的对象是这样一种接口，它占用的资源不多，计算量也不大，就是速度太慢。所以我们通常使用 ContDownLatch 对需要获取的数据进行并行处理，效果非常不错，比如在 200ms 内返回对 50 个耗时 100ms 的下层接口的调用。
+
+JVM 优化：虽然对 JVM 进行优化，有时候会获得巨大的性能提升，但在 JVM 不发生问题时，我们一般不会想到它。原因就在于，相较于上面 5 层所达到的效果来说，它的优化效果有限。但在代码优化、并行优化、JVM 优化的过程中，JVM 的知识却起到了关键性的作用，是一些根本性的影响因素。
+
+操作系统优化：操作系统优化是解决问题的杀手锏，比如像 HugePage、Luma、“CPU 亲和性”这种比较底层的优化。但就计算节点来说，对操作系统进行优化并不是很常见。运维在背后会做一些诸如文件句柄的调整、网络参数的修改，这对于我们来说就已经够用了。
+
+内存区域大小
+
+ -XX:+UseG1GC：用于指定 JVM 使用的垃圾回收器为 G1，尽量不要靠默认值去保证，要显式的指定一个。
+ -Xmx：设置堆的最大值，一般为操作系统的 2/3 大小。
+ -Xms：设置堆的初始值，一般设置成和 Xmx 一样的大小来避免动态扩容。
+ -Xmn：表示年轻代的大小，默认新生代占堆大小的 1/3。高并发、对象快消亡场景可适当加大这个区域，对半，或者更多，都是可以的。但是在 G1 下，就不用再设置这个值了，它会自动调整。
+ -XX:MaxMetaspaceSize：用于限制元空间的大小，一般 256M 足够了，这一般和初始大小 -XX:MetaspaceSize 设置成一样的。
+ -XX:MaxDirectMemorySize：用于设置直接内存的最大值，限制通过 DirectByteBuffer 申请的内存。
+ -XX:ReservedCodeCacheSize：用于设置 JIT 编译后的代码存放区大小，如果观察到这个值有限制，可以适当调大，一般够用即可。
+ -Xss：用于设置栈的大小，默认为 1M，已经足够用了。
+
+内存调优
+
+ -XX:+AlwaysPreTouch：表示在启动时就把参数里指定的内存全部初始化，启动时间会慢一些，但运行速度会增加。
+ -XX:SurvivorRatio：默认值为 8，表示伊甸区和幸存区的比例。
+ -XX:MaxTenuringThreshold：在 CMS 下默认为 6，G1 下默认为 15，这个值和对象提升有关，改动效果会比较明显。对象的年龄分布可以使用 -XX:+PrintTenuringDistribution 打印，如果后面几代的大小总是差不多，证明过了某个年龄后的对象总能晋升到老生代，就可以把晋升阈值设小。
+ PretenureSizeThreshold：表示超过一定大小的对象，将直接在老年代分配，不过这个参数用的不是很多。
+
+
+
+常用虚拟机参数
+
+-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps 
+-XX:+PrintGCApplicationStoppedTime -XX:+PrintTenuringDistribution 
+-Xloggc:/tmp/logs/gc_%p.log -XX:+HeapDumpOnOutOfMemoryError 
+-XX:HeapDumpPath=/tmp/logs -XX:ErrorFile=/tmp/logs/hs_error_pid%p.log 
+-XX:-OmitStackTraceInFastThrow
+
+一般在项目中输出详细的 GC 日志，并加上可读性强的 GC 日志的时间戳。特别情况下我还会追加一些反映对象晋升情况和堆详细信息的日志，用来排查问题。另外，OOM 时自动 Dump 堆栈，我一般也会进行配置
+
+jstat -gcutil $pid 1000
+
+只需要提供一个 Java 进程的 ID，然后指定间隔时间（毫秒）就 OK 了。
+S0 S1 E O M CCS YGC YGCT FGC FGCT GCT
+0.00 0.00 72.03 0.35 54.12 55.72 11122 16.019 0 0.000 16.019
+E 其实是 Eden 的缩写，S0 对应的是 Surivor0，S1 对应的是 Surivor1，O 代表的是 Old，而 M 代表的是 Metaspace
+
+YGC 代表的是年轻代的回收次数，YGC T对应的是年轻代的回收耗时。那么 FGC 肯定代表的是 Full GC 的次数
+
+在启动命令行中加上参数 -t，可以输出从程序启动到现在的时间。如果 FGC 和启动时间的比值太大，就证明系统的吞吐量比较小，GC 花费的时间太多了。另外，如果老年代在 Full GC 之后，没有明显的下降，那可能内存已经达到了瓶颈，或者有内存泄漏问题
+
+
+
+加了 GC 时间的增量和 GC 时间比率两列。
+jstat -gcutil -t 90542 1000 | awk 'BEGIN{pre=0}{if(NR>1) {print $0 "\t" ($12-pre) "\t" $12*100/$1 ; pre=$12 } else { print $0 "\tGCT_INC\tRate"} }'
+
+
+
+将GC写入的日志文件，单独放在一块HDD硬盘上，防止多个应用对磁盘资源的争抢
+
+OOM 时自动 Dump 堆栈，写入的文件比较大，短时间内会与其他的磁盘IO争抢资源
+
+
+
+FullGC有三种情况。、
+
+第一，当老年代无法再分配内存的时候；第二，元空间不足的时候；第三，显示调用System.gc的时候。另外，像CMS一类的垃圾回收器，在MinorGC出现promotion failure的时候也会发生FullGC
+
+Full GC 都是在老年代空间不足的时候执行。但不要忘了，我们还有一个区域叫作 Metaspace，它的容量是没有上限的，但是每当它扩容时，就会发生 Full GC
+
+可以看到它的默认值：
+java -XX:+PrintFlagsFinal 2>&1 | grep Meta
+
+按照经验，一般调整成 256MB 就足够了。同时，为了避免无限制使用造成操作系统内存溢出，我们同时设置它的上限。配置参数如下：
+-XX:+UseConcMarkSweepGC -Xmx5460M -Xms5460M -Xmn3460M -XX:MetaspaceSize=256M -XX:MaxMetaspaceSize=256M
+
+吞吐量大不代表响应能力高，吞吐量一般这么描述：在一个时间段内完成了多少个事务操作；在一个小时之内完成了多少批量操作。
+
+响应能力是以最大的延迟时间来判断的，比如：一个桌面按钮对一个触发事件响应有多快；需要多长时间返回一个网页；查询一行 SQL 需要多长时间，等等。
+
+这两个目标，在有限的资源下，通常不能够同时达到，我们需要做一些权衡
+
+平常的 Web 服务器，都是对响应性要求非常高的。选择 CMS、G1、ZGC 上
+
+一般优化的思路有一个重要的顺序：
+
+ 程序优化，效果通常非常大；
+ 扩容，如果金钱的成本比较小，不要和自己过不去；
+ 参数调优，在成本、吞吐量、延迟之间找一个平衡点。
+
+
+
+大部分的业务场景是高并发的。对象诞生的快，死亡的也快，对年轻代的利用直接影响了整个堆的垃圾收集。
+
+ 分配足够大的年轻代，会增加系统的吞吐，但不会增加 GC 的负担。
+ 容量足够的 Survivor 区，能够让对象尽可能的留在年轻代，减少对象的晋升，进而减少 Major GC
+
+
+
+java进程崩溃消失了，什么原因？
+
+dmesg  -T 查看奔溃的信息
+
+大多数崩溃于 Linux 的内存管理有关。由于 Linux 系统采用的是虚拟内存分配方式，JVM 的代码、库、堆和栈的使用都会消耗内存，但是申请出来的内存，只要没真正 access过，是不算的，因为没有真正为之分配物理页面。
+
+随着使用内存越用越多。会启用 SWAP；当 SWAP 也用的差不多了，会尝试释放 cache；当这两者资源都耗尽，杀手就出现了。oom-killer 会在系统内存耗尽的情况下跳出来，选择性的干掉一些进程以求释放一点内存。
+
+所以这时候我们的 Java 进程，是操作系统“主动”终结的
+
+
+
+kill -9 PID 强制停掉进程，不给进程使用回调函数的机会，也不会等进程处理完手上的工作，对于已经进入生产环境的系统来说，这是非常危险的。
+kill -15 PID 在停掉进程之前调用提前写好的回调函数，或者等待进程处理完正在处理的任务之后，再停掉进程。
+
+
+
+
+
+MM 是一个抽象的概念，它描述了一系列的规则或者规范，用来解决多线程的共享变量问题，比如 volatile、synchronized 等关键字就是围绕 JMM 的语法
+
+JVM 试图定义一种统一的内存模型，能将各种底层硬件，以及操作系统的内存访问差异进行封装，使 Java 程序在不同硬件及操作系统上都能达到相同的并发效果
+
+
+
+如何缩减对内存的占用？
+
+缩减查询的字段，减少常驻内存的数据；
+去掉不必要的、命中率低的堆内缓存，改为分布式缓存
+
+ 限制单次请求对内存的无限制使用
+
+
+
+# 如何搭建虚拟机监控
+
+Jolokia 就是一个将 JMX 转换成 HTTP 的适配器，方便了 JMX 的使用
+
+Jokokia 可以通过 jar 包的形式，集成到 Spring Boot 中
+
+<dependency>
+        <groupId>org.jolokia</groupId>
+        <artifactId>jolokia-core</artifactId>
+</dependency>
+
+配置 application.yml 
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: jolokia
+
+telegraf 组件作为一个通用的监控 agent，和 JVM 进程部署在同一台机器上，通过访问转化后的 HTTP 接口，以固定的频率拉取监控信息；
+
+然后把这些信息存放到 influxdb 时序数据库中；
+
+最后，通过Grafana 展示组件，设计 JVM 监控图表
+
+# 如何排查堆外内存
+
+## 1、堆外内存有哪些
+
+元空间MetaSpace：主要是方法区和常量池的存储之地，使用数“MaxMetaspaceSize”可以限制它的大小
+
+直接内存：通过 DirectByteBuffer 申请的内存,可以使用参数“MaxDirectMemorySize”来限制它的大小
+
+java.nio.Bits
+
+```java
+private static volatile long maxMemory = VM.maxDirectMemory();
+```
+
+java.nio.DirectByteBuffer#DirectByteBuffer(int)
+
+```java
+DirectByteBuffer(int cap) {                   // package-private
+
+    super(-1, 0, cap, cap);
+    boolean pa = VM.isDirectMemoryPageAligned();
+    int ps = Bits.pageSize();
+    long size = Math.max(1L, (long)cap + (pa ? ps : 0)); 
+    Bits.reserveMemory(size, cap); //判断可用内存是否小于MaxDirectMemorySize，否则进行gc，gc之后内存还不够用，抛出OOM
+
+    long base = 0;
+    try {
+        base = unsafe.allocateMemory(size); //用unsafe来分配内存
+    } catch (OutOfMemoryError x) {
+        Bits.unreserveMemory(size, cap);
+        throw x;
+    }
+    unsafe.setMemory(base, size, (byte) 0);
+    if (pa && (base % ps != 0)) {
+        // Round up to page boundary
+        address = base + ps - (base & (ps - 1));
+    } else {
+        address = base;
+    }
+ 		 //用来回收堆外内存，继承PhantomReference，虚引用
+    cleaner = Cleaner.create(this, new Deallocator(base, size, cap));
+    att = null;
+}
+```
+
+其他堆外内存：主要是指使用了 Unsafe 或者其他 JNI 手段直接直接申请的内存,没有参数限制大小
+
+## 2、堆外内存问题排查
+
+通过top命令，查看进程的VIRT（进程虚拟内存空间大小） 、RES（进程虚拟内存空间中已经映射到物理内存空间的那部分的大小），如果VIRT、RES明显高于实际分配的内存大小，说明肯定使用了堆外内存
+
+ AlwaysPreTouch 参数：虽然参数指定了 JVM 大小，但只有在 JVM 真正使用的时候，才会分配给它。这个参数，在 JVM 启动的时候，就把它所有的内存在操作系统分配了。在堆比较大的时候，会加大启动时间，但在这个场景中，我们为了减少内存动态分配的影响，把这个值设置为 True
+
+NativeMemoryTracking参数：用来追踪 Native 内存的使用情况。通过在启动参数上加入 -XX:NativeMemoryTracking=detail 就可以启用
+
+使用jcmd查看内存分配
+
+jcmd $pid  VM.native_memory summary
+
+### Perf
+
+除了能够进行一些性能分析，它还能帮助我们找到相应的 native 调用
+
+perf record -g -p PID监控栈函数调用
+
+perf 运行一段时间后 Ctrl+C 结束，会生成一个文件 perf.data
+
+perf report -i perf.data 查看报告
+
+### gperftools
+
+google 还有一个类似的、非常好用的工具，叫做 gperftools，我们主要用到它的 Heap Profiler，功能更加强大
+
+输出两个环境变量
+
+mkdir -p /opt/test
+
+export LD_PRELOAD=/usr/lib64/libtcmalloc.so 
+
+export HEAPPROFILE=/opt/test/heap #存放内存申请的动作
+
+pprof -text *heap | head -n 200 #分析文件，追踪到申请内存最多的函数
+
+
+
+获取内存快照
+
+通过配置一些参数，可以在发生 OOM 的时候，被动 dump 一份堆栈信息，这是一种；
+
+另一种，就是通过 jmap 主动去获取内存的快照
+
+jmap -dump:format=b,file=heap.bin 37340
+jhsdb jmap  --binaryheap --pid  37340（java9）
+
+这些命令本身会占用操作系统的资源，在某些情况下会造成服务响应缓慢，所以不要频繁执行
+
+
+
+内存溢出
+
+一般内存溢出，表现形式就是 Old 区的占用持续上升，即使经过了多轮 GC 也没有明显改善。内存泄漏的根本就是，有些对象并没有切断和 GC Roots 的关系
+
+在 java9 版本里被干掉了，jmap被 jhsdb取代，可以像下面的命令一样使用：
+jhsdb jmap  --heap --pid  37340 看到大体的内存布局，以及每一个年代中的内存使用情况
+jhsdb jmap  --pid  37288
+jhsdb jmap  --histo --pid  37340 能够大概的看到系统中每一种类型占用的空间大小，用于初步判断问题。比如某个对象 instances 数量很小，但占用的空间很大，这就说明存在大对象
+jhsdb jmap  --binaryheap --pid  3734
+
+jhsdb jmap  --binaryheap --pid  37340
+
+
+
+问题排查工具MAT
+
+下载地址https://eclipse.dev/mat/downloads.php
+
+浅堆代表了对象本身的内存占用，包括对象自身的内存占用，以及“为了引用”其他对象所占用的内存。
+
+深堆是一个统计结果，会循环计算引用的具体对象所占用的内存。但是深堆和“对象大小”有一点不同，深堆指的是一个对象被垃圾回收后，能够释放的内存大小，这些被释放的对象集合，叫做保留集（Retained Set）
+
+
+
+
+
+如何观察 GC 的频次？
+
+jstat -gc PID 1000 3
+
+通过垃圾回收频率和消耗时间初步判断 GC 是否存在可疑问题
+
+如何定位占用内存的对象？
+
+ps -ef|grep 应用程序名称 查看进程ID
+
+jmap -histo PID|head -n 20 查看该进程的对象、数量
+
+可视化的 JVM 监控工具
+
+jvisual 能做的事情很多，监控内存泄漏、跟踪垃圾回收、执行时内存分析、CPU 线程分析等，而且通过图形化的界面指引就可以完成
+
+nohup java -Djava.rmi.server.hostname=实际ip
+
+ -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=1099 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -jar demo-0.0.1-SNAPSHOT.jar &
+
+
+
+直接一键查看指定进程里导致 CPU 飙升的 java 方法，非常简单方便
+ show-busy-java-threads -p <指定的Java进程Id>
+
+https://github.com/oldratlee/useful-scripts
+
+
+
+
+
+压缩指针
+
+在默认打印的对象内存布局信息中，Klass Pointer被压缩成4字节，如果我们不希望开启压缩指针功能，则可以增加一个JVM参数-XX:-UseCompressedOops。
+
+
+
+对齐填充的作用
+
+CPU在访问内存读取数据时，并不是按照逐个字节来访问的，而是以字长（Word Size）为单位来访问的。简单地说，字长是指CPU一次能够并行处理的二进制位数，字长总是8字节的整数倍
+
+比如在64位的操作系统中，CPU访问内存读取数据的单位就是8字节，在32位的操作系统中，CPU访问内存读取数据的单位是4字节，这样设计的目的是减少CPU访问内存的次数，提升CPU的使用率。
+
+
+
+1.1 确认堆内存是使用否太大
+
+Java进程pid(使用jps -v列出java进程列表)
+
+获取运行环境的物理内存和剩余内存（free -m）
+
+Java进程的堆内存用量（jcmd -p PID GC.heap_info）
+
+Java进程GC情况（jstat-gcutil）
+
+
+
+获取进程分配的内存映射信息 ，
+
+pmap -x PID |sort -gr -k2 |less （-g,按十进制数值进行排序;-r,进行逆序排序;-k2,对第二个字段排序）
+
+export MALLOC_ARENA_MAX=1
+
+开启Native Memory Tracking
+
+-XX:NativeMemoryTracking=detail
+
+jcmd PID  VM.native_memory detail
+
+开启NativeMemoryTracking会造成5%的性能下降，用完记得修改JVM参数并重启永久关闭，或者可以通过以下命令临时关闭：jcmd vm.native_memory stop  PID
+
+堆外内存是否用量太多
+
+堆外内存，尤其是网络通信非常频繁的应用，往往大量使用Java NIO，而NIO为了提高效率，往往会申请很多的堆外内存。确认这个区域用量是否过大，最直接的方法是先查看是否是DirectByteBuffer或者MappedByteBuffer使用了较多的堆外内存
+
+如果你的服务器已经开启了远程JMX，可以通过jdk自带的工具（比如jconsole、jvisualvm）查询
